2009-09-03   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init, formats/*: don't remove spaces again in 
	@quotation formatting.

2009-09-02   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: take into account @  when 
	removing spaces at the end of texinfo strings.
	Improve node name parsing and parse node name in menu taking into
	account @-commands that may protect some separator characters.
	Fixes http://savannah.gnu.org/bugs/?8218.
	* texi2html.pl: use makeinfo error messages for duplicated nodes
	anchor and floats. Add line number information to anchor and 
	floats.

2009-08-31   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.*: handle better @kbdinputstyle.
	More error messages are the same than makeinfo in C.

2009-08-30   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.*, examples/*: invert the meaning of the 3rd argument
	of set_conf.
	Uset set_conf to have the *contents output even if there is no
	@c*contents.
	Use set_conf/get_conf directly for set*contentsaftertitlepage.
	* texi2html.init: Add a header for the footnotes.

2009-08-29   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, test/sectionning/nodename_parentheses: 
	ignore nodes having a name alike references to
	external nodes in menu, line (manual)node.
	* texi2html.pl, formats/info.init: warn for non empty format without 
	@item. https://savannah.gnu.org/bugs/?15513

2009-08-25   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: fix the number of entry per index page in case of 
	index split.
	* tests/encodings: added example chinese_mixed_with_en from 
	https://savannah.gnu.org/bugs/?22696.

2009-08-24   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init, mediawiki.init: remove the user 
	from footer, and the corresponding USER variable and 
	$Texi2HTML::THISDOC{user}. This is a useless information leaking.

2009-08-23   Patrice Dumas  <dumas@centre-cired.fr>
