@@ -50,12 +50,12 @@ ul.toc {list-style: none}
 <table cellpadding="1" cellspacing="1" border="0">
 <tr><td valign="middle" align="left">node: </td>
 <td valign="middle" align="left"></td>
-<td valign="middle" align="left"><a href="index.html#Top" accesskey="n" rel="next">Top</a></td>
+<td valign="middle" align="left"></td>
 <td valign="middle" align="left">,</td>
 <td valign="middle" align="left"></td>
 <td valign="middle" align="left">,</td>
-<td valign="middle" align="left"><a href="index.html#Top" accesskey="u" rel="up">Top</a></td>
-<td valign="middle" align="left">[<a href="index.html#Top" title="Node following in node reading order"> &gt; </a>]</td>
+<td valign="middle" align="left"></td>
+<td valign="middle" align="left">[ &gt; ]</td>
 </tr></table>
 <hr>
 <h1 class="unnumbered">Unnumbered</h1>
