@@ -53,10 +53,10 @@ ul.toc {list-style: none}
 <td valign="middle" align="left"></td>
 <td valign="middle" align="left"></td>
 <td valign="middle" align="left">,</td>
-<td valign="middle" align="left"><a href="index.html#Top" accesskey="p" rel="previous">Top</a></td>
+<td valign="middle" align="left"></td>
 <td valign="middle" align="left">,</td>
-<td valign="middle" align="left"><a href="index.html#Top" accesskey="u" rel="up">Top</a></td>
-<td valign="middle" align="left">[<a href="section-node.html#section-node" title="Node following in node reading order"> &gt; </a>]</td>
+<td valign="middle" align="left"></td>
+<td valign="middle" align="left">[ &gt; ]</td>
 </tr></table>
 <hr>
 <h1 class="chapter">1 Chapter</h1>
